2003-10-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-use-favicon): Modify the doc-string.
	(w3m-show-graphic-icons-in-mode-line): New variable.
	(w3m-show-graphic-icons-in-header-line): New variable.
	(w3m-buffer-setup): Modify the value for
	`mode-line-buffer-identification' not to show favicon if
	`w3m-show-graphic-icons-in-mode-line' is nil.

	* w3m-xmas.el: Bind `w3m-show-graphic-icons-in-mode-line' when
	compiling.
	(w3m-initialize-graphic-icons): Don't make graphic icons if
	`w3m-show-graphic-icons-in-mode-line' is nil.

2003-10-05  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-form-replace): Call `set-buffer-modified-p'.
	(w3m-form-field-parse): Do nothing when fid is nil.
	(w3m-form-input-radio): Likewise.
	(w3m-form-get-by-name): New function.
	(w3m-form-input-map): Use it.

2003-10-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-tab-line): Fix the logic determining whether to
	display favicon.

2003-10-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-spinner-map-on-header-line): Abolish.
	(w3m-modeline-spinner-map): Rename from
	`w3m-spinner-map-on-mode-line'.
	(w3m-setup-header-line): Don't initialize
	`w3m-spinner-map-on-header-line'.
	(w3m-tab-spinner-map): New variable.
	(w3m-tab-make-keymap): Initialize it.
	(w3m-tab-line): Use it.

2003-10-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-modeline-separator): New variable.
	(w3m-modeline-favicon): New variable.
	(w3m-favicon-image): Move from w3m-favicon.el.
	(w3m-buffer-setup): Also call `w3m-initialize-graphic-icons' when
	Emacs 21 is running; simplify the value for
	`mode-line-buffer-identification'.

	* w3m-e21.el: Bind `w3m-favicon-image' and
	`w3m-modeline-process-status-on' when compiling.
	(w3m-spinner-map-on-header-line): New variable.
	(w3m-spinner-map-on-mode-line): New variable.
	(w3m-spinner-map-help-echo): New variable.
	(w3m-setup-header-line): Initialize the value for